2005-03-16 17:28  antirez

	* ChangeLog, jim-aio.c, jim.c, jim.h: [env] modified to just be
	  able to read a specified var name form the environment, i.e. to
	  be ANSI-C.

	  Minor fix to AIO extension to use the new DelProc API.

2005-03-16 17:06  patthoyts

	* jim.c, jim.h: Added interpreter pointer to the command delete
	  proc.

2005-03-16 16:30  antirez

	* ChangeLog, jim.c: Added the [env] command

2005-03-16 14:35  antirez

	* ChangeLog, jim.c: added CVS ID info in the banner.

2005-03-16 14:11  antirez

	* ChangeLog, jim.c: more GC fixes.

2005-03-16 13:55  antirez

	* ChangeLog, jim.c: Fixed a bug introduced in the Gargage
	  Collection code some commit ago.

2005-03-15 22:58  antirez

	* ChangeLog, Makefile: clean target of Makefile now deletes .xo
	  files too.

2005-03-15 15:42  antirez

	* ChangeLog, jim.c, jim.h: A first version of [info complete].

2005-03-15 15:05  antirez

	* BUGS, ChangeLog, jim.c, test.tcl: [info level ?level?] fixed.
	  Tests uncommented.

2005-03-15 11:31  antirez

	* AUTHORS, ChangeLog: More credits in the AUTHORS file

2005-03-14 17:36  patthoyts

	* jim-win32.c: Added a bunch of cursor handling apis

2005-03-14 17:35  patthoyts

	* jim.c: const police

2005-03-14 15:39  antirez

	* ChangeLog, jim.c, jim.h: 'iterator' argument modified to 'iter'
	  for C++ STL safety.

2005-03-14 14:11  antirez

	* ChangeLog, jim.c, jim.h: more fixes to allow inclusion of jim.h
	  into C++ programs.

2005-03-14 13:20  antirez

	* ChangeLog, jim.h: Some change to make jim.h more C++ friendly,
	  still not working with g++ btw.

2005-03-14 10:16  antirez

	* ChangeLog, TODO, jim.c: Removed the inclusion of a not-needed
	  header file "sys/time.h" that prevented compilation with
	  JIM_ANSIC under non POSIX systems.

2005-03-14 08:22  antirez

	* ChangeLog, TODO, jim.c: [lmap] command.

2005-03-13 18:43  antirez

	* ChangeLog, jim.h: Max nesting depth modified to 10000

2005-03-13 16:53  antirez
